welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: '=' expected but ';' found.
var biscuits:=0;
               ^RunHalf:5: error: '=' expected but ';' found.
var caseOranges:=0;
                  ^